mantis0951351/fmg_only/fmgingress443.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fmg-ingress-nginx-external
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  tls:
  - hosts:
    - fmgminikube
    secretName: fortimanager-tls-fmg
  rules:
  - host: fmgminikube
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: fmgcontainerhttps
            port:
              number: 80
